syntax = "proto3";
package cometbft.types.v3;

option go_package = "github.com/cometbft/cometbft/api/cometbft/types/v3";

// CanonicalVoteExtension provides us a way to serialize a vote extension from
// a particular validator such that we can sign over those serialized bytes.
message CanonicalVoteExtension {
  bytes    extension = 1;
  sfixed64 height    = 2;
  sfixed64 round     = 3;
  string   chain_id  = 4;
}
